regal-new-changes.

--- a/aboutus.html
+++ b/aboutus.html
@@ -68,11 +68,11 @@
       
       <div id="navbar" class="navbar-collapse collapse">
          <ul class="nav navbar-nav">                                                                                                                 
-          <li class="active">
+          <li>
             <a href="index.html">Home</a>
           </li>
-          <li>
-            <a href="aboutUs.html">About Us</a>
+          <li class="active">
+            <a href="aboutus.html">About Us</a>
           </li>
           <li>
             <a href="lifestyleManagement.html">Lifestyle Management</a>
@@ -218,11 +218,11 @@ Fax : (803) 815 - 1308</br>
                     </div>
 
                     <ul class="footer-li">
-                        <li class="active">
+                        <li>
                             <a href="index.html">Home</a>
                           </li>
-                          <li>
-                            <a href="aboutUs.html">About Us</a>
+                          <li class="active">
+                            <a href="aboutus.html">About Us</a>
                           </li>
                           <li>
                             <a href="services.html">Services</a>
