--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="aboutUs.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
           </li>
           <li>
             <a href="lifestyleManagement.html">Lifestyle Management</a>
@@ -357,7 +357,7 @@ Fax : (803) 815 - 1308</br>
                             <a href="index.html">Home</a>
                           </li>
                           <li>
-                            <a href="aboutUs.html">About Us</a>
+                            <a href="aboutus.html">About Us</a>
                           </li>
                           <li>
                             <a href="services.html">Services</a>
