--- a/aboutus.html
+++ b/aboutus.html
@@ -98,10 +98,10 @@
     </div>
   </nav>
 
-  <section class="full-section-1">
+  <section class="full-section-1 inner-page">
       <div class="container">
           <div class="row">
-              <div class="col-sm-12 inner-page">
+              <div class="col-sm-12">
                   <h1 class="heading-title"><span class="hightlighted">"</span>We Provide Quality Service at its Finest<span class="hightlighted">"</span></h1>             
                  </div>
             </div>
