--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
        
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 divider">
+      <div class="col-lg-4 col-md-4 col-sm-12">
         <div class="panel-heading">
             <div class="icon-circle">
                 <i class="icon icon-medium">
