--- a/bges/index.html
+++ b/bges/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
   <nav class="navbar navbar-inverse navbar-static-top">
-    <div class="navbar-header">
+    <div class="navbar-header container">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
         aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
