--- a/bges/aboutus.html
+++ b/bges/aboutus.html
@@ -285,8 +285,8 @@ The first generation of Gorkha migrants of Mumbai were born & brought up in thei
                     <span class="hightlighted">"</span>
                   </h6>
 
-                  <p>Mr. Dhruva Pradhan</br>
-                      Chairman (BGES)</p>
+                  <p><b>Mr. Dhruva Pradhan</br>
+                      Chairman (BGES)</b></p>
           </div>
         </div>
       </div>
