--- a/bges/aboutus.html
+++ b/bges/aboutus.html
@@ -77,7 +77,10 @@
           <a href="cpap.html">CPAP</a>
         </li>
         <li>
-          <a href="mediaGallery.html">media /Gallery</a>
+            <a href="committeeMember.html">Committee Member</a>
+          </li>
+        <li>
+          <a href="mediaGallery.html">Media /Gallery</a>
         </li>
         <li>
           <a href="contactUs.html">Contact Us</a>
