--- a/castlennest/gallery.html
+++ b/castlennest/gallery.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Imahe Template</title>
+	<title>CastlenNest Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -58,7 +58,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2 col-md-push-5 text-center">
-							<div id="colorlib-logo"><a href="index.html"><i class="icon-camera4"></i>Imahe</a></div>
+							<div id="colorlib-logo"><a href="index.html"><i class="icon-camera4"></i>CastlenNest</a></div>
 						</div>
 						<div class="col-md-5 col-md-pull-2 text-right menu-1">
 							<ul>
@@ -236,7 +236,7 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-3 colorlib-widget">
-						<h4>About Imahe</h4>
+						<h4>About CastlenNest</h4>
 						<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 						<p>
 							<ul class="colorlib-social-icons">
@@ -283,7 +283,7 @@
 							<a href="blog.html" class="blog-img" style="background-image: url(images/blog-3.jpg);">
 							</a>
 							<div class="desc">
-								<h2><a href="blog.html">Imahe the biggest photography studio</a></h2>
+								<h2><a href="blog.html">CastlenNest the biggest photography studio</a></h2>
 								<p class="admin"><span>30 March 2018</span></p>
 							</div>
 						</div>
