--- a/castlennest/index.html
+++ b/castlennest/index.html
@@ -89,7 +89,7 @@
 
 		<section id="home" class="video-hero" style="height: 800px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 		<div class="overlay"></div>
-			<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Yz5-mrDBbxU',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a> 
+			<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=wj_3COzLw3s',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a> 
 			<div class="display-t text-center">
 				<div class="display-tc">
 					<div class="container">
@@ -115,7 +115,7 @@
 								<i class="icon-camera4"></i>
 							</span>
 							<div class="desc">
-								<h3>Photography</h3>
+								<h3>Video Production</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
@@ -126,7 +126,7 @@
 								<i class="icon-image2"></i>
 							</span>
 							<div class="desc">
-								<h3>Image Processing</h3>
+								<h3>Post  Production</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
@@ -137,7 +137,7 @@
 								<i class="icon-video3"></i>
 							</span>
 							<div class="desc">
-								<h3>Videography</h3>
+								<h3>Motion Graphics</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								</div>
 						</div>
@@ -151,9 +151,18 @@
 				<div class="row">
 					<div class="col-md-12 col-md-pull-2 animate-box">
 						<div class="about-desc">
-							<h2>We Are CastlenNest a Photography Studio</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+							<h2>We Are CastlenNest</h2>
+							<p>
+								<b>Manipulate and edit film pieces in a way that is invisible to the audience</b>
+							</br>
+								- Take a brief to grasp production team’s needs and specifications
+								- Review shooting script and raw material to create a shot decision list based on scenes’ value and contribution to continuity
+								- Trim footage segments and put together the sequence of the film
+								- Input music, dialogues, graphics and effects
+								- Create rough and final cuts
+								- Ensure logical sequencing and smooth running
+								- Consult with stakeholders from production to post-production process
+								- Continuously discover and implement new editing technologies and industry’s best practices to maximize efficiency.</p>
 						</div>
 					</div>
 				</div>
@@ -309,7 +318,7 @@
 				<div class="row row-pb-md">
 					<div class="col-md-3 colorlib-widget">
 						<h4>About CastlenNest</h4>
-						<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+						<p>CastlenNest has most Experienced and Enthusiastic Video Maker's in our team and because of that we have power to make your Video dream come true.</p>
 						<p>
 							<ul class="colorlib-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -364,10 +373,11 @@
 					<div class="col-md-3 colorlib-widget">
 						<h4>Contact Info</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+							<li>Flat No.3 1st Floor Sai Sparsh Appt,<br>
+									Jambulwadi Road. Ambegoan Bk. pune</li>
+							<li><a href="tel://8975174909"><i class="icon-phone"></i> 8975174909/ 8412061200</a></li>
+							<li><a href="mailto:castlennest@gmail.com"><i class="icon-envelope"></i> castlennest@gmail.com</a></li>
+							<li><a href="#"><i class="icon-location4"></i> www.castlennest.com</a></li>
 						</ul>
 					</div>
 				</div>
