--- a/castlennest/index.html
+++ b/castlennest/index.html
@@ -78,10 +78,10 @@
         <div class="display-tc">
           <div class="container">
             <div class="col-md-10 col-md-offset-1">
-              <h1 class="holder"><span>Fashion Photoshoot</span></h1>
-              <h2>Classy Rebel Fashion Photoshoot</h2>
-              <p>27.03.2018</p>
-              <p><a href="gallery.html" class="btn btn-primary btn-custom">View Gallery</a></p>
+              <h1 class="holder"><span>A Creative Shooting Studio</span></h1>
+              <h2>Classy Rebel Photoshoot</h2>
+              <p>Make Memories With Us</p>
+              <p><a href="gallery.html" class="btn btn-primary btn-custom">Hire Us Now</a></p>
             </div>
           </div>
         </div>
@@ -296,11 +296,14 @@
 
 
         <div class="col-lg-3 col-md-3 col-sm-12">
-
+          <address>
+              Flat No.3 1st Floor Sai Sparsh Appt,<br>
+              Jambulwadi Road. Ambegoan Bk. Pune
+          </address>
           <p>
-            Email : info@CastlenNesthc.com</br>
-            Phone : (803) 486-2520</br>
-            Fax : (803) 815-1308</br>
+              <a href="tel://8975174909"><i class="icon-phone"></i> 8975174909</a></br>
+              <a href="tel://8412061200"><i class="icon-phone"></i> 8412061200</a></br>
+              <a href="mailto:castlennest@gmail.com"><i class="icon-envelope"></i> castlennest@gmail.com</a>
           </p>
         </div>
 
@@ -338,7 +341,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright © 2018 CastlenNest Homecare & Concierge. All right reserved.<br>
+            Copyright © 2018 CastlenNest. All right reserved.<br>
+            <a href="http://www.bizexo.com/">Site Developed By BIZEXO</a>
           </p>
 
 
