--- a/castlennest/index.html
+++ b/castlennest/index.html
@@ -67,8 +67,7 @@
       </div>
     </div>
   </nav>
-
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="player"
       data-property="{videoURL:'https://www.youtube.com/watch?v=wj_3COzLw3s',containment:'#myCarousel', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default', coverImage:'images/home-cover-img.jpg'}">
     </div>
@@ -188,13 +187,13 @@
               </li>
               <li> Input music, dialogues, graphics and effects
               </li>
-              <li>  Create rough and final cuts
+              <li> Create rough and final cuts
               </li>
-              <li>  Ensure logical sequencing and smooth running
+              <li> Ensure logical sequencing and smooth running
               </li>
               <li> Consult with stakeholders from production to post-production process
               </li>
-              <li>  Continuously discover and implement new editing technologies and industry’s best practices to
+              <li> Continuously discover and implement new editing technologies and industry’s best practices to
                 maximize efficiency.</li>
             </ul>
           </div>
@@ -204,106 +203,230 @@
   </div>
 
   <div class="container">
-      <div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center gallery">
-						<h2>Gallery</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name</p>
-					</div>
-				</div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2 text-center gallery">
+        <h2>Gallery</h2>
+        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One
+          day however a small line of blind text by the name</p>
       </div>
-    <div id="jLightroom" class="jlr gray_out">
-      <a data-fancybox href="https://www.youtube.com/watch?v=NX55VnQ37zg" class="jlr_item">
-        <img src="images/gallery-1.jpg" class="jlr_img" />
-        <div class="desc text-center">
-          <h5>Celebrity</h5>
-          <p class="category"><span>Sanskruti Balgude</span></p>
-        </div> 
-      </a>
-      <a data-fancybox href="https://www.youtube.com/watch?v=BmvbkQcbD0U" class="jlr_item">
-        <img src="images/gallery-2.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Celebrity</h5>
-            <p class="category"><span>Sidharth Chandekar</span></p>
-          </div> 
-      </a>
-      <a data-fancybox href="https://www.youtube.com/watch?v=P_RWnrTiOSo" class="jlr_item">
-        <img src="images/gallery-3.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Celebrity</h5>
-            <p class="category"><span>Mrunmayee Deshpande</span></p>
-          </div> 
-      </a>
-      <a data-fancybox href="https://www.youtube.com/watch?v=-ZxYTu6iURU" class="jlr_item">
-        <img src="images/gallery-4.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Celebrity</h5>
-            <p class="category"><span>Pooja Sawant</span></p>
-          </div> 
-      </a>  
-      <a data-fancybox href="https://www.youtube.com/watch?v=PLsCtdZrWaE&feature=youtu.be" class="jlr_item">
-        <img src="images/gallery-5.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Celebrity</h5>
-            <p class="category"><span>Sai Tamhankar</span></p>
-          </div> 
-      </a>  
-      <a data-fancybox href="https://www.youtube.com/watch?v=o-u2O2aSJSE&feature=youtu.be" class="jlr_item">
-        <img src="images/gallery-6.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Event</h5>
-            <p class="category"><span>Sunburn</span></p>
-          </div> 
-      </a> 
-      <a data-fancybox href="https://www.youtube.com/watch?v=4q5yTZY-H-M" class="jlr_item">
-        <img src="images/gallery-9.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Songs</h5>
-            <p class="category"><span>Pal pal Ke pass</span></p>
-          </div> 
-      </a> 
-      <a data-fancybox href="https://www.youtube.com/watch?v=LyPlZONj4H8" class="jlr_item">
-        <img src="images/gallery-7.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Event</h5>
-            <p class="category"><span>Ganeshustav</span></p>
-          </div> 
-      </a> 
+    </div>
+  </div>
+  <div id="jLightroom" class="jlr gray_out">
+    <a data-fancybox href="https://www.youtube.com/watch?v=NX55VnQ37zg" class="jlr_item">
+      <img src="images/gallery-1.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Celebrity</h5>
+        <p class="category"><span>Sanskruti Balgude</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=BmvbkQcbD0U" class="jlr_item">
+      <img src="images/gallery-2.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Celebrity</h5>
+        <p class="category"><span>Sidharth Chandekar</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=P_RWnrTiOSo" class="jlr_item">
+      <img src="images/gallery-3.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Celebrity</h5>
+        <p class="category"><span>Mrunmayee Deshpande</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=-ZxYTu6iURU" class="jlr_item">
+      <img src="images/gallery-4.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Celebrity</h5>
+        <p class="category"><span>Pooja Sawant</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=PLsCtdZrWaE&feature=youtu.be" class="jlr_item">
+      <img src="images/gallery-5.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Celebrity</h5>
+        <p class="category"><span>Sai Tamhankar</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=o-u2O2aSJSE&feature=youtu.be" class="jlr_item">
+      <img src="images/gallery-6.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Event</h5>
+        <p class="category"><span>Sunburn</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=4q5yTZY-H-M" class="jlr_item">
+      <img src="images/gallery-9.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Songs</h5>
+        <p class="category"><span>Pal pal Ke pass</span></p>
+      </div>
+    </a>
+    <a data-fancybox href="https://www.youtube.com/watch?v=LyPlZONj4H8" class="jlr_item">
+      <img src="images/gallery-7.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Event</h5>
+        <p class="category"><span>Ganeshustav</span></p>
+      </div>
+    </a>
 
-      <a data-fancybox href="https://www.youtube.com/watch?v=VFekDpGpL3Y&feature=youtu.be" class="jlr_item">
-        <img src="images/gallery-8.jpg" class="jlr_img" />
-        <div class="desc text-center">
-            <h5>Short Film</h5>
-            <p class="category"><span>Stuck in Jelly</span></p>
-          </div> 
-      </a> 
-
-    
-   </div>
+    <a data-fancybox href="https://www.youtube.com/watch?v=VFekDpGpL3Y&feature=youtu.be" class="jlr_item">
+      <img src="images/gallery-8.jpg" class="jlr_img" />
+      <div class="desc text-center">
+        <h5>Short Film</h5>
+        <p class="category"><span>Stuck in Jelly</span></p>
+      </div>
+    </a>
 
 
+  </div>
+
+  <div class="full-section-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center services">
+          <h2>Our Services</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-12">
+          <div class="services"><a href="index.html">
+              <i class="icon icon-small">
+                <svg focusable="false">
+                  <use xlink:href="#icon_fimlEditing"></use>
+                </svg>
+              </i>
+              <h5>
+                FILM EDITING
+              </h5>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-12">
+            <div class="services"><a href="index.html">
+                <i class="icon icon-small">
+                  <svg focusable="false">
+                    <use xlink:href="#icon_soundEditing"></use>
+                  </svg>
+                </i>
+                <h5>
+                  SOUND MIXING
+                </h5>
+              </a>
+            </div>
+          </div>
+
+
+          <div class="col-lg-3 col-md-3 col-sm-12">
+              <div class="services"><a href="index.html">
+                  <i class="icon icon-small">
+                    <svg focusable="false">
+                      <use xlink:href="#icon_videoService"></use>
+                    </svg>
+                  </i>
+                  <h5>
+                      DI GRADING
+                  </h5>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-3 col-sm-12">
+                <div class="services"><a href="index.html">
+                    <i class="icon icon-small">
+                      <svg focusable="false">
+                        <use xlink:href="#icon_VFX"></use>
+                      </svg>
+                    </i>
+                    <h5>
+                        VFX
+                    </h5>
+                  </a>
+                </div>
+              </div>
+
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <div class="services"><a href="index.html">
+                        <i class="icon icon-small">
+                          <svg focusable="false">
+                            <use xlink:href="#icon_theater"></use>
+                          </svg>
+                        </i>
+                        <h5>
+                            ATMOS PREVIEW THEATER
+                        </h5>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-md-3 col-sm-12">
+                      <div class="services"><a href="index.html">
+                          <i class="icon icon-small">
+                            <svg focusable="false">
+                              <use xlink:href="#icon_film"></use>
+                            </svg>
+                          </i>
+                          <h5>
+                              COOPERATE FILM
+                          </h5>
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-12">
+                        <div class="services"><a href="index.html">
+                            <i class="icon icon-small">
+                              <svg focusable="false">
+                                <use xlink:href="#icon_equipment"></use>
+                              </svg>
+                            </i>
+                            <h5>
+                                CAMERA EQUIPMENT
+                            </h5>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-3 col-md-3 col-sm-12">
+                          <div class="services"><a href="index.html">
+                              <i class="icon icon-small">
+                                <svg focusable="false">
+                                  <use xlink:href="#icon_production"></use>
+                                </svg>
+                              </i>
+                              <h5>
+                                  PRODUCTION
+                              </h5>
+                            </a>
+                          </div>
+                        </div>
+
+      </div>
+    </div>
+  </div>
   <!-- FOOTER -->
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-12">
           <div class="logo"><a href="index.html"><i class="icon icon-medium">
-            <svg focusable="false">
-              <use xlink:href="#icon_logo"></use>
-            </svg>
-          </i>CastlenNest</a></div>
+                <svg focusable="false">
+                  <use xlink:href="#icon_logo"></use>
+                </svg>
+              </i>CastlenNest</a></div>
         </div>
 
 
 
         <div class="col-lg-3 col-md-3 col-sm-12">
           <address>
-              Flat No.3 1st Floor Sai Sparsh Appt,<br>
-              Jambulwadi Road. Ambegoan Bk. Pune
+            Flat No.3 1st Floor Sai Sparsh Appt,<br>
+            Jambulwadi Road. Ambegoan Bk. Pune
           </address>
           <p>
-              <a href="tel://8975174909"><i class="icon-phone"></i> 8975174909</a></br>
-              <a href="tel://8412061200"><i class="icon-phone"></i> 8412061200</a></br>
-              <a href="mailto:castlennest@gmail.com"><i class="icon-envelope"></i> castlennest@gmail.com</a>
+            <a href="tel://8975174909"><i class="icon-phone"></i> 8975174909</a></br>
+            <a href="tel://8412061200"><i class="icon-phone"></i> 8412061200</a></br>
+            <a href="mailto:castlennest@gmail.com"><i class="icon-envelope"></i> castlennest@gmail.com</a>
           </p>
         </div>
 
@@ -322,6 +445,22 @@
                   </i>
                 </a>
               </li>
+              <li><a href="https://www.instagram.com" target="_blank">
+                <i class="icon icon-ex-small">
+                  <svg focusable="false">
+                    <use xlink:href="#icon_instagram"></use>
+                  </svg>
+                </i>
+              </a>
+            </li>
+            <li><a href="https://www.youtube.com" target="_blank">
+              <i class="icon icon-ex-small">
+                <svg focusable="false">
+                  <use xlink:href="#icon_youtube"></use>
+                </svg>
+              </i>
+            </a>
+          </li>
             </ul>
           </div>
 
@@ -359,29 +498,29 @@
   <!-- Placed at the end of the document so the pages load faster -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- <!-- Include all compiled plugins (below), or include individual files as needed -->
- <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
- <script src="js/jquery.lightroom.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/ytpPlayer.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+  <script src="js/jquery.lightroom.js"></script>
+  <script src="js/jquery.fancybox.js"></script>
+  <script src="js/ytpPlayer.js"></script>
   <script src="js/misc.js"></script>
- 
+
   <script src="svg/svg.js"></script>
- 
+
   <script type="text/javascript">
     $("#jLightroom").lightroom({
-        image_container_selector: ".jlr_item",
-        img_selector: "img.jlr_img",
-        img_class_loaded: "jlr_loaded",
-        img_space: 5,
-        img_mode: 'min',
-        init_callback: function(elem){$(elem).removeClass("gray_out")}
+      image_container_selector: ".jlr_item",
+      img_selector: "img.jlr_img",
+      img_class_loaded: "jlr_loaded",
+      img_space: 5,
+      img_mode: 'min',
+      init_callback: function (elem) { $(elem).removeClass("gray_out") }
     }).init();
-</script>
- <script src="js/bootstrap.min.js"></script>
+  </script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
