--- a/castlennest/index.html
+++ b/castlennest/index.html
@@ -481,7 +481,11 @@
 
           <p class="copyright">
             Copyright © 2018 CastlenNest. All right reserved.<br>
-            <a href="http://www.bizexo.com/">Site Developed By BIZEXO</a>
+            <a href="http://www.bizexo.com/"><span>Site Developed By</span> <i class="icon icon-medium">
+                <svg focusable="false">
+                  <use xlink:href="#icon_bizexo"></use>
+                </svg>
+              </i></a>
           </p>
 
 
